--- a/src/languages/fr-FR.json
+++ b/src/languages/fr-FR.json
@@ -4,18 +4,18 @@
   "global_missing_permissions": "{{emote_lock}} Permission(s) manquante(s)",
   "global_missing_permissions_bot": "Le bot ne dispose pas des permissions nécessaires pour exécuter cette commande. Veuillez vérifier les permissions du bot.\n{{missing}}",
   "global_cannot_convert": "{{emote_fail}} Impossible convertir `{{arg_provided}}` en `{{arg_expected}}`.\n{{emote_wrench}} **Utilisation correcte :** {{usage}}",
-  "global_not_found": "{{emote_fail}} Le {{type}} spécifié est introuvable. Impossible convertir `{{arg_provided}}` en `{{arg_expected}}`.\n{{emote_wrench}} **Utilisation correcte :** {{usage}}",
+  "global_not_found": "{{emote_fail}} {{type}} spécifié(e) est introuvable. Impossible convertir `{{arg_provided}}` en `{{arg_expected}}`.\n{{emote_wrench}} **Utilisation correcte :** {{usage}}",
   "global_not_found_types": {
-    "user": "utilisateur",
-    "member": "membre",
-    "role": "rôle",
-    "channel": "salon",
-    "lang": "langage",
-    "cmd": "commande",
-    "emoji": "émoji",
-    "int": "nombre entier",
-    "bool": "booléen",
-    "snowflake": "snowflake"
+    "user": "L'utilisateur",
+    "member": "Le membre",
+    "role": "Le rôle",
+    "channel": "Le salon",
+    "lang": "Le langage",
+    "cmd": "La commande",
+    "emoji": "L'émoji",
+    "int": "Le nombre entier",
+    "bool": "Le booléen",
+    "snowflake": "Le snowflake"
   },
   "global_mod_action_log": "{{action}} par : {{moderator.tag}} ({{moderator.id}}) | Utilisateur : {{target.tag}} ({{target.id}}) | Raison : {{reason}}",
   "global_logging_mod": "`[{{timestamp}}]` {{emoji}} **{{moderator.tag}}** `({{moderator.id}})` a {{action}} **{{target.tag}}** `({{target.id}})` pour **{{reason}}** `[#{{infraction_id}}]`",
@@ -53,9 +53,9 @@
   "global_cannot_action_role_equal_bot": "{{emote_warn}} Je ne peux pas effectuer cette action sur **{{target.tag}}** `({{target.id}})` parce que je n'ai pas de rôle plus élevé qu'eux !",
   "global_cannot_action_bot_self": "{{emote_warn}} Vous ne pouvez pas effectuer cette action sur le bot !",
   "global_premium_only": "Ceci est une commande premium. Devenez Patron et accédez à cette commande et à d'autres fonctionnalités exclusives sur <https://www.patreon.com/bulbbot>",
-  "event_message_args_unexpected": "{{emote_warn}} Argument inattendu {{argument}}. Attendu : `{{arg_expected}}`, obtenu : `{{arg_provided}}`.\n{{emote_wrench}} **Utilisation correcte :** {{usage}}",
+  "event_message_args_unexpected": "{{emote_warn}} Argument inattendu `{{argument}}`. Attendu : `{{arg_expected}}`, obtenu : `{{arg_provided}}`.\n{{emote_wrench}} **Utilisation correcte :** {{usage}}",
   "event_message_args_missing": "{{emote_warn}} Argument manquant {{argument}}. Attendu : `{{arg_expected}}`.\n{{emote_wrench}} **Utilisation correcte :** {{usage}}",
-  "event_message_args_missing_list": "{{emote_warn}} Argument inattendu {{argument}}. Attendu : `{{arg_expected}}`.\n{{emote_wrench}} **Arguments corrects :** {{argument_list}}",
+  "event_message_args_missing_list": "{{emote_warn}} Argument inattendu `{{argument}}`. Attendu : `{{arg_expected}}`.\n{{emote_wrench}} **Arguments corrects :** {{argument_list}}",
   "event_message_edit": "{{emote_edit}} Un message de **{{user_tag}}** `({{user.id}})` a été modifié dans <#{{channel.id}}>.\n`ID (salon-message) : {{channel.id}}-{{message.id}}`\n**Avant :** {{before}}\n**Après :** {{after}}",
   "event_message_edit_special": "{{emote_edit}} Un message de **{{user_tag}}** `({{user.id}})` a été modifié dans <#{{channel.id}}>.\n`ID (salon-message) : {{channel.id}}-{{message.id}}`",
   "event_message_delete": "{{emote_trash}} Un message de **{{user_tag}}** `({{user.id}})` a été supprimé dans <#{{channel.id}}>.\n`ID (salon-message) : {{channel.id}}-{{message.id}}`\n{{content}}{{reply}}{{sticker}}{{attachment}}",
@@ -187,13 +187,13 @@
   "serverinfo_emotes_none": "Aucun émoji",
   "action_success": "{{emote_success}} Un modérateur a {{action}} **{{target.tag}}** `({{target.id}})` pour **{{reason}}** `[#{{infraction_id}}]`",
   "action_success_temp": "{{emote_success}} **{{target.tag}}** `({{target.id}})` a été {{action}} jusqu'au **{{until}}** pour **{{reason}}** `[#{{infraction_id}}]`",
-  "action_success_multi": "{{emote_success}} {{full_list}} ont été {{action}} pour **{{reason}}**",
-  "action_multi_less_than_2": "{{emote_warn}} Moins de 2 cibles sélectionnées. Exécution normale de {{action}} à la place",
+  "action_success_multi": "{{emote_success}} Un modérateur a {{action}} {{full_list}} pour **{{reason}}**",
+  "action_multi_less_than_2": "{{emote_warn}} Moins de 2 cibles sélectionnées. Exécution normale {{action}} à la place",
   "action_multi_types": {
-    "ban": "bannissement",
-    "kick": "expulsion",
-    "unban": "révocation de bannissement",
-    "warn": "avertissement"
+    "ban": "du bannissement",
+    "kick": "de l'expulsion",
+    "unban": "de la révocation de bannissement",
+    "warn": "de l'avertissement"
   },
   "already_banned": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` a déjà été banni pour `{{reason}}`",
   "not_banned": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` n'est pas banni de ce serveur !",
