--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -75,7 +75,8 @@
 
   "event_change": "`{{part}}` from `{{before}}` to `{{after}}`",
   "event_update_server": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated the server settings. Changes:\n> {{changes}}",
-  "event_update_role": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated the **{{role.name}}** role. Changes:\n> {{changes}}",
+  "event_update_role": "{{emote_wrench}} The <@&{{role}}> role has been updated. Changes:\n> {{changes}}",
+  "event_update_role_moderator": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated the <@&{{role}}> role. Changes:\n> {{changes}}",
   "event_update_channel": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated the **{{type}}** <#{{channel.id}}>.\nChanges:\n> {{changes}}",
 
   "event_channel_create": "{{emote_add}} A new **{{type}}** has been created <#{{channel.id}}> (`{{channel.id}}`).",
@@ -108,9 +109,9 @@
     "GUILD_VOICE" : "voice channel",
     "GROUP_DM" : "group DM",
     "GUILD_CATEGORY" : "channel category",
-    "GUILD_NEWS" : "news channel",
+    "GUILD_NEWS" : "announcement channel",
     "GUILD_STORE" : "store channel",
-    "GUILD_NEWS_THREAD" : "news thread",
+    "GUILD_NEWS_THREAD" : "announcement channel thread",
     "GUILD_PUBLIC_THREAD" : "thread",
     "GUILD_PRIVATE_THREAD" : "private thread",
     "GUILD_STAGE_VOICE" : "stage channel",
