--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -53,6 +53,17 @@
     "unknown": "{{emote_fail}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}",
     "automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined."
   },
+  "global_words": {
+    "none": "none",
+    "some": "some",
+    "all": "all",
+    "and": "and",
+    "or": "or",
+    "yes": "yes",
+    "no": "no",
+    "confirm": "confirm",
+    "cancel": "cancel"
+  },
 
   "global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
   "global_cannot_action_owner": "{{emote_warn}} You cannot perform this action on the server owner!",
