--- a/src/languages/it-IT.json
+++ b/src/languages/it-IT.json
@@ -53,8 +53,8 @@
   "global_cannot_action_role_equal_bot": "{{emote_warn}} Non posso eseguire questa azione su **{{target.tag}}** `({{target.id}})` perché non ho un ruolo più alto di lui/lei!",
   "global_cannot_action_bot_self": "{{emote_warn}} Non puoi eseguire questa azione sul bot!",
   "global_premium_only": "Questo è un comando premium. Diventa un Patron e ottieni l'accesso a questo comando e ad altre funzionalità esclusive a <https://www.patreon.com/bulbbot>",
-  "event_message_args_unexpected": "{{emote_warn}} Argomento inaspettato {{argument}}. Previsto `{{arg_expected}}` ricevuto `{{arg_provided}}`.\n{{emote_wrench}} **Uso corretto:** {{usage}}",
-  "event_message_args_missing": "{{emote_warn}} Argomento mancante {{argument}}. Previsto `{{arg_expected}}`.\n{{emote_wrench}} **Uso corretto:** {{usage}}",
+  "event_message_args_unexpected": "{{emote_warn}} Argomento inaspettato `{{argument}}`. Previsto `{{arg_expected}}` ricevuto `{{arg_provided}}`.\n{{emote_wrench}} **Uso corretto:** {{usage}}",
+  "event_message_args_missing": "{{emote_warn}} Argomento mancante `{{argument}}`. Previsto `{{arg_expected}}`.\n{{emote_wrench}} **Uso corretto:** {{usage}}",
   "event_message_args_missing_list": "{{emote_warn}} Argomento inatteso `{{argument}}`. Previsto `{{arg_expected}}`.\n{{emote_wrench}} **Argomenti corretti:** {{argument_list}}",
   "event_message_edit": "{{emote_edit}} Un messaggio da **{{user_tag}}** `({{user.id}})` è stato aggiornato in <#{{channel.id}}>\n`ID (canale-messaggio): {{channel.id}}-{{message.id}}`\n**B:** {{before}}\n**A:** {{after}}",
   "event_message_edit_special": "{{emote_edit}} Un messaggio da **{{user_tag}}** `({{user.id}})` è stato aggiornato in <#{{channel.id}}>\n`ID (canale-messaggio): {{channel.id}}-{{message.id}}`",
