--- a/src/languages/hi-IN.json
+++ b/src/languages/hi-IN.json
@@ -214,7 +214,7 @@
   "nickname_too_long": "{{emote_warn}} प्रचलित नाम में बहुत अधिक वर्ण हैं (`{{length}}`)। उपनाम 32 वर्णों तक सीमित हैं",
   "ping_latency": "बॉट प्रतीक्षा अवधि **{{latency_bot}}ms** है\nWebSocket विलंबता **{{latency_ws}}ms** है",
   "uptime_uptime": "वर्तमान अपटाइम **{{uptime}}** है",
-  "license_license": "📜 यह बॉट एमआईटी लाइसेंस के तहत लाइसेंस प्राप्त है, अधिक जानकारी के लिए पूरा लाइसेंस देखें **[here](https://github.com/TestersQTs/Bulbbot/blob/master/LICENSE)**",
+  "license_license": "📜 यह बॉट एट्रिब्यूशन-नॉन-कमर्शियल-नोडेरिवेटिव्स 4.0 इंटरनेशनल (सीसी बाय-एनसी-एनडी 4.0) लाइसेंस के तहत लाइसेंस प्राप्त है, अधिक विवरण के लिए पूर्ण लाइसेंस देखें **[here](https://github.com/TestersQTs/Bulbbot/blob/master/LICENSE)**",
   "privacy_policy": "📜 बॉट की गोपनीयता नीति देखें **[here](https://bulbbot.mrphilip.xyz/privacy-policy)**",
   "github_source_code": "{{emote_github}} Bulbbot पूरी तरह से ओपन सोर्स प्रोजेक्ट है। आप हमारे GitHub रिपॉजिटरी में स्रोत कोड पा सकते हैं **[here](https://github.com/TestersQTs/Bulbbot)**",
   "invite_desc": "**बॉट को अपने सर्वर पर आमंत्रित करें**\n{{bot_invite}}\n\n**समर्थन सर्वर से जुड़ें**\n{{support_guild}}",
