--- a/src/languages/fr-FR.json
+++ b/src/languages/fr-FR.json
@@ -252,8 +252,8 @@
   "duration_invalid_0s": "{{emote_fail}} La durée ne peut pas être inférieure à **0 secondes** !",
   "duration_invalid_6h": "{{emote_fail}} La durée ne peut pas être supérieure à **6 heures** !",
   "duration_invalid_1y": "{{emote_fail}} La durée ne peut pas être supérieure à **1 an** !",
-  "lockdown_locked": "{{emote_success}} Le salon <#{{channel}}> a été verrouillé avec succès",
-  "lockdown_unlocked": "{{emote_success}} Le salon <#{{channel}}> a été déverrouillé avec succès",
+  "lockdown_locked": "{{emote_locked}} Le salon <#{{channel}}> a été verrouillé avec succès",
+  "lockdown_unlocked": "{{emote_unlocked}} Le salon <#{{channel}}> a été déverrouillé avec succès",
   "mute_muterole_not_found": "{{emote_warn}} Ce serveur n'a pas de rôle muet configuré !\n{{emote_wrench}} **Astuce :** Vous pouvez configurer le rôle muet en utilisant la commande `!configure mute_role`",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` n'est pas actuellement muet !",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` est déjà muet !",
