--- a/src/languages/hi-IN.json
+++ b/src/languages/hi-IN.json
@@ -252,8 +252,8 @@
   "duration_invalid_0s": "{{emote_fail}} अवधि **0 सेकंड** से कम नहीं हो सकती!",
   "duration_invalid_6h": "{{emote_fail}} अवधि **6 घंटे** से अधिक नहीं हो सकती",
   "duration_invalid_1y": "{{emote_fail}} अवधि **1 वर्ष** से अधिक नहीं हो सकती!",
-  "lockdown_locked": "{{emote_success}} चैनल को सफलतापूर्वक लॉक कर दिया गया <#{{channel}}>",
-  "lockdown_unlocked": "{{emote_success}} चैनल को सफलतापूर्वक अनलॉक किया गया <#{{channel}}>",
+  "lockdown_locked": "{{emote_locked}} चैनल को सफलतापूर्वक लॉक कर दिया गया <#{{channel}}>",
+  "lockdown_unlocked": "{{emote_unlocked}} चैनल को सफलतापूर्वक अनलॉक किया गया <#{{channel}}>",
   "mute_muterole_not_found": "{{emote_warn}} इस सर्वर में म्यूट भूमिका कॉन्फ़िगर नहीं है!\n{{emote_wrench}} **टिप:** आप `! configure mute_role` कमांड का उपयोग करके म्यूट भूमिका को कॉन्फ़िगर कर सकते हैं",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` वर्तमान में म्यूट नहीं है!",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` वर्तमान में म्यूट नहीं है!",
