--- a/src/languages/sk-SK.json
+++ b/src/languages/sk-SK.json
@@ -251,8 +251,8 @@
   "duration_invalid_0s": "{{emote_fail}} Dĺžka nemôže byť menšia ako **0 sekund**!",
   "duration_invalid_6h": "{{emote_fail}} Dĺžka nemôže byť dlhšia ako **6 hodín**",
   "duration_invalid_1y": "{{emote_fail}} Dĺžka nemôže byť dlhšia ako **1 rok**!",
-  "lockdown_locked": "{{emote_success}} Server <#{{channel}}> bol úspešne uzamknutý",
-  "lockdown_unlocked": "{{emote_success}} Server <#{{channel}}> bol úspešne odomknutý",
+  "lockdown_locked": "{{emote_locked}} Server <#{{channel}}> bol úspešne uzamknutý",
+  "lockdown_unlocked": "{{emote_unlocked}} Server <#{{channel}}> bol úspešne odomknutý",
   "mute_muterole_not_found": "{{emote_warn}} Tento server nemá nakonfigurovanú stĺmenú rolu!\n{{emote_wrench}} **Pomôcka:** Môžeš si nakonfigurovať stĺmenú rolu s použitím `!configure mute_role` command",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` nie je momentálne stĺmený(á)!",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` už je stĺmený(á)!",
