--- a/src/languages/sv-SE.json
+++ b/src/languages/sv-SE.json
@@ -252,8 +252,8 @@
   "duration_invalid_0s": "{{emote_fail}} Varaktigheten kan inte vara lägre än **0 sekunder**!",
   "duration_invalid_6h": "{{emote_fail}} Varaktighet kan inte vara längre än **6 timmar**",
   "duration_invalid_1y": "{{emote_fail}} Varaktighet kan inte vara längre än **1 år**!",
-  "lockdown_locked": "{{emote_success}} Låst kanal <#{{channel}}>",
-  "lockdown_unlocked": "{{emote_success}} Låste upp kanal <#{{channel}}>",
+  "lockdown_locked": "{{emote_locked}} Låst kanal <#{{channel}}>",
+  "lockdown_unlocked": "{{emote_unlocked}} Låste upp kanal <#{{channel}}>",
   "mute_muterole_not_found": "{{emote_warn}} Den här servern har inte en tystningsroll konfigurerad!\n{{emote_wrench}} **Tips: ** Du kan konfigurera tystningsrollen med kommandot `!configure mute_role`",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` är inte tystad för tillfället!",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` är redan tystad!",
