--- a/src/languages/cs-CZ.json
+++ b/src/languages/cs-CZ.json
@@ -254,8 +254,8 @@
   "duration_invalid_0s": "{{emote_fail}} Doba trvání nemůže být menší než **0 vteřin**!",
   "duration_invalid_6h": "{{emote_fail}} Doba trvání nemůže být delší než **6 hodin**",
   "duration_invalid_1y": "{{emote_fail}} Doba trvání nemůže být delší než **1 rok**!",
-  "lockdown_locked": "{{emote_success}} Kanál <#{{channel}}> byl úspěšně uzamčen",
-  "lockdown_unlocked": "{{emote_success}} Kanál <#{{channel}}> byl úspěšně odemčen",
+  "lockdown_locked": "{{emote_locked}} Kanál <#{{channel}}> byl úspěšně uzamčen",
+  "lockdown_unlocked": "{{emote_unlocked}} Kanál <#{{channel}}> byl úspěšně odemčen",
   "mute_muterole_not_found": "{{emote_warn}} Tento server nemá nastavenou umlčenou roli!\n{{emote_wrench}} **Tip:** Umlčenou roli lze nastavit pomocí příkazu `!configure mute_role`",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` není právě umlčen!",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` je již umlčen!",
