--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -331,8 +331,8 @@
   "duration_invalid_6h": "{{emote_fail}} Duration cannot be longer than **6 hours**",
   "duration_invalid_1y": "{{emote_fail}} Duration cannot be longer than **1 year**!",
 
-  "lockdown_locked": "{{emote_success}} Successfully locked down channel <#{{channel}}>",
-  "lockdown_unlocked": "{{emote_success}} Successfully unlocked channel <#{{channel}}>",
+  "lockdown_locked": "{{emote_locked}} Successfully locked down channel <#{{channel}}>",
+  "lockdown_unlocked": "{{emote_unlocked}} Successfully unlocked channel <#{{channel}}>",
 
   "mute_muterole_not_found": "{{emote_warn}} This server does not have a mute role configured!\n{{emote_wrench}} **Tip:** You can configure the mute role using the `!configure mute_role` command",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` is not currently muted!",
