--- a/src/languages/it-IT.json
+++ b/src/languages/it-IT.json
@@ -252,8 +252,8 @@
   "duration_invalid_0s": "{{emote_fail}} La durata non può essere inferiore a **0 secondi**!",
   "duration_invalid_6h": "{{emote_fail}} La durata non può essere più lunga di **6 ore**",
   "duration_invalid_1y": "{{emote_fail}} La durata non può essere più lunga di **1 anno**!",
-  "lockdown_locked": "{{emote_success}} Canale bloccato con successo <#{{channel}}>",
-  "lockdown_unlocked": "{{emote_success}} Canale sbloccato con successo <#{{channel}}>",
+  "lockdown_locked": "{{emote_locked}} Canale bloccato con successo <#{{channel}}>",
+  "lockdown_unlocked": "{{emote_unlocked}} Canale sbloccato con successo <#{{channel}}>",
   "mute_muterole_not_found": "{{emote_warn}} Questo server non ha un ruolo per i membri mutati!\n{{emote_wrench}} **Consiglio:** Puoi configurarlo usando il comando `!configure mute_role`",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` non è attualmente mutato!",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` è già mutato!",
