--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -252,8 +252,8 @@
   "duration_invalid_0s": "{{emote_fail}} A duração não pode ser inferior a **0 seconds**!",
   "duration_invalid_6h": "{{emote_fail}} A duração não pode ser maior do que **6 hours**",
   "duration_invalid_1y": "{{emote_fail}} A duração não pode ser maior do que **1 year**!",
-  "lockdown_locked": "{{emote_success}} Canal <#{{channel}}> foi bloqueado com sucesso",
-  "lockdown_unlocked": "{{emote_success}} Canal <#{{channel}}> foi desbloqueado com sucesso",
+  "lockdown_locked": "{{emote_locked}} Canal <#{{channel}}> foi bloqueado com sucesso",
+  "lockdown_unlocked": "{{emote_unlocked}} Canal <#{{channel}}> foi desbloqueado com sucesso",
   "mute_muterole_not_found": "{{emote_warn}} Este servidor não tem um cargo de silenciado(a) configurado!\n{{emote_wrench}} **Dica:** Você pode configurar um cargo de silenciado(a) utilizando o comando `!configure mute_role`",
   "mute_not_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` não está atualmente silenciado(a)!",
   "mute_already_muted": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` já está silenciado(a)!",
