--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -266,9 +266,8 @@
   "purge_too_many": "{{emote_fail}} Can only purge a max of 99 messages at a time",
   "purge_too_few": "{{emote_fail}} You cannot purge less than 2 messages",
   "purge_success": "{{emote_success}} Successfully purged **{{count}}** messages",
-
-  "verification_community_zero": "{{emote_fail}} Verification level cannot be set to `0` for community servers!",
-  "verification_level_error": "{{emote_fail}} Verification level cannot be greater than `4` or less than `0`",
+ 
+  "verification_level_select": "Please select your verification level then press save",
   "verification_level_success": "{{emote_success}} Server verification level changed to `{{level}}`",
 
   "nickname_success": "{{emote_success}} Nickname of **{{target.tag}}** `({{target.id}})` has been changed from `{{nick_old}}` to `{{nick_new}}` for **{{reason}}** `[#{{infraction_id}}]`",
