--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -268,7 +268,7 @@
   
   "banpool_create_name_exists": "{{emote_warn}} That banpool name already exists, choice another one",
   "banpool_create_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` created a new banpool with the name **{{name}}**",
-  "banpool_create_success": "{{emote_success}} Successfully created a new banpool with the name of {{name}}",
+  "banpool_create_success": "{{emote_success}} Successfully created a new banpool with the name of **{{name}}**",
 
   "banpool_delete_message": "Are you sure you want to delete this banpool?",
   "banpool_delete_success_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` deleted a banpool with the name **{{name}}**",
